fixed page height on mobile

--- a/public/assets/css/about.css
+++ b/public/assets/css/about.css
@@ -1,7 +1,3 @@
-main {
-    height: 100%;
-}
-
 .about-section {
     min-height: 100%;
     display: flex;
@@ -22,16 +18,13 @@ main {
 }
 
 @media (max-width: 768px) {
-    main {
-        height: auto;
-    }
     .about-section {
         padding-top: 30px;
     }
 
     .about-section img {
         margin: 2% auto 1% auto;
-        height: 550px;
+        height: auto;
         width: 99%;
     }
 
